# yaafc

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build-3rdparty-libcurl.yml  build-3rdparty-openssl.yml  deploy-picomesh-yemu-demo.yml  deploy-yaafc-yemu-demo.yml
.woodpecker/: linux.yml  macos.yml  windows.yml
assets/picoforge/config/: picoforge-webasm.yaml  picoforge.yaml
assets/picoforge/static/: style.css
build-tools/picomesh/: 3rdparty-fetch.cmake
build-tools/picomesh/libs/: libcurl.cmake  libgit2.cmake  libmdbx.cmake  openssl.cmake  simdjson.cmake  sqlite3.cmake  uv.cmake
build-tools/picomesh/win-compat/: msvc-prelude.h  unistd.h
build-tools/yaafc/: 3rdparty-fetch.cmake
build-tools/yaafc/cross/: linux-riscv64.cmake
docs/: architecture.md  msgpack-rpc.md  msgpack.md  perf-counters.md  perf.md  picoforge-pipeline.md  relational-storage.md  runner-agent.md  security.md  sharded-relational-storage.md  tracing.md
include/picohttpparser/: picohttpparser.h
include/picomesh/argv/: argv.h
include/picomesh/authenticators/: base.h  registry.h
include/picomesh/authorizers/: base.h  registry.h
include/picomesh/config/: config.h
include/picomesh/core/: idkey.h  result.h  yperf.h  yspan.h  ytelemetry.h  ytelemetry_store.h  ytrace.h
include/picomesh/engine/: engine.h  resolve.h
include/picomesh/frontends/alpine/: alpine.h
include/picomesh/frontends/cli/: cli.h
include/picomesh/frontends/msgpack/: msgpack.h
include/picomesh/frontends/yhttp/: yhttp.h
include/picomesh/frontends/yrpc/: yrpc.h
include/picomesh/frontends/yttp/: yttp.h
include/picomesh/json/: json.h
include/picomesh/loop/: exec.h  loop.h
include/picomesh/msgpack/: msgpack.h
include/picomesh/picoclass/: class.h  jinvoke.h  minvoke.h  rpc.h  yheaders.h
include/picomesh/picoco/: coro.h
include/picomesh/platform/: time.h
include/picomesh/plugin/accounts/: accounts.h
include/picomesh/plugin/calculator/: calculator.h
include/picomesh/plugin/git_pipeline/: git_pipeline.h
include/picomesh/plugin/git_repo/: git_repo.h
include/picomesh/plugin/github_authn/: github_authn.h
include/picomesh/plugin/issues/: issues.h
include/picomesh/plugin/mesh/: mesh.h
include/picomesh/plugin/password_authn/: password_authn.h
include/picomesh/plugin/personal_access_tokens/: personal_access_tokens.h
include/picomesh/plugin/portalloc/: portalloc.h
include/picomesh/plugin/registry/: registry.h
include/picomesh/plugin/relational_storage/: relational_sql.h  relational_storage.h
include/picomesh/plugin/runner_agent/: runner_agent.h
include/picomesh/plugin/session/: session.h
include/picomesh/plugin/sharded_storage/: sharded_storage.h
include/picomesh/plugin/storage/: storage.h
include/picomesh/plugin/time/: time.h
include/picomesh/plugin/token_issuer/: token_issuer.h
include/picomesh/plugin/trace_collector/: trace_collector.h
include/picomesh/security/: base64.h  jwt.h  jwt_verifier.h  secret.h  sha256.h
include/picomesh/yargv/: yargv.h
include/picomesh/yclass/: rpc.h
include/picomesh/ycore/: idkey.h
include/picomesh/yengine/: engine.h
include/picomesh/ysecurity/: jwt.h
include/uthash/: uthash.h
include/yaafc/plugin/accounts/: accounts.h
include/yaafc/plugin/calculator/: calculator.h
include/yaafc/plugin/git_pipeline/: git_pipeline.h
include/yaafc/plugin/git_repo/: git_repo.h
include/yaafc/plugin/github_authn/: github_authn.h
include/yaafc/plugin/issues/: issues.h
include/yaafc/plugin/mesh/: mesh.h
include/yaafc/plugin/time/: time.h
include/yaafc/yclass/: class.h
include/yaafc/ycore/: result.h
qa-tools/analysis/result-checker/: result-checker.cpp
qa-tools/lib/naming-convention/: core.cpp
scenarios/git-yaafc/: mesh-up.sh  yaafc.yaml
scenarios/git-yaafc/deploy/: run.sh.tmpl  stage.sh
scenarios/git-yaafc/yemu/: README.md  build-image.sh  run-vm.sh  test-qemu.sh
scenarios/git-yaafc/yemu/web/: CMakeLists.txt  build.sh  index.html  serve.py  tinyemu-bridge.c  tinyemu-iframe.html  yaafc.cfg
scenarios/picoforge/: mesh-up.sh
src/picoforge/: README.md
src/picoforge/webapp/: http_client.c  http_client.h  main.c  webapp.c  webapp.h
src/picomesh/allocator/: allocator.c
src/picomesh/argv/: argv.c
src/picomesh/authenticators/: jwt_util.h  registry.c
src/picomesh/authorizers/: registry.c
src/picomesh/config/: config.c
src/picomesh/core/: result.c  yperf.c  yspan.c  ytelemetry.c  ytelemetry_store.c  ytrace.c
src/picomesh/engine/: engine.c  resolve.c
src/picomesh/json/: json.cpp
src/picomesh/loop/: exec.c  loop.c
src/picomesh/main/: CMakeLists.txt  autoport.c  autoport.h  main.c
src/picomesh/picoclass/: class.c  jinvoke.c  minvoke.c  rpc.c  yheaders.c
src/picomesh/picoco/: coro.c
src/picomesh/platform/: longjmp_chk_stub.c
src/picomesh/security/: base64.c  jwt.c  jwt_verifier.c  secret.c  sha256.c
src/picomesh/yargv/: yargv.c
src/picomesh/yclass/: class.c  jinvoke.c  minvoke.c  rpc.c  yheaders.c
src/picomesh/yco/: coro.c
src/picomesh/yconfig/: yconfig.c
src/picomesh/ycore/: result.c  yspan.c  ytelemetry.c  ytelemetry_store.c  ytrace.c
src/picomesh/yengine/: engine.c  resolve.c
src/picomesh/yloop/: yloop.c
src/picomesh/ymain/: autoport.c  ymain.c
src/picomesh/ysecurity/: base64.c  jwt.c  secret.c  sha256.c
src/tinyemu/: machine.c  machine.h  ps2.c  ps2.h  readme.txt  riscv_cpu.c  riscv_machine.c  sdl.c  temu.c  virtio.c  virtio.h  x86_machine.c
src/tinyemu/slirp/: chr-backend.c  chr-backend.h  if.c  ip.h  libslirp.h  slirp.c  socket.c  socket.h
src/yaafc/yengine/: engine.c
src/yaafc/yloop/: yloop.c
src/yaafc/ymain/: ymain.c
tests/integration/picoforge/: test_external_groups.py  test_rbac.py
tests/performance/picoforge/: CMakeLists.txt  picoforge-perf.c
tools/msgpack-client/: calculator_server_impl.py
tools/msgpack-codegen/: emit_python_server.py  gen.py
tools/picoforge/: mesh-up.sh  msgpack-config-remote-smoke.sh  msgpack-outbound-smoke.sh  smoke.sh
tools/picoforge/deploy/: init  run.sh.tmpl  stage.sh
tools/picoforge/yemu/: README.md  build-image.sh  run-vm.sh
(+193 files in other folders)
